frontend/tests/errors/ER-005/non_constant_expression/test.vx
// @rfc: docs/vexel-rfc.md#errors--diagnostics
// @desc: Array size not being a compile-time constant is a compile-time error | Array size not compile-time constant: non-pure function call


&^compute() -> #i32 {
    5;
}

&^main() -> #i32 {
    len:#i32 = compute();
    len = len + 1;
    data:#i32[len];
    0;
}
